# meg2bids

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  QUICKSTART.md  README.md  meg2bids_cli.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
docs/: README.md  advanced.md  configuration.md  install.md  tutorial.md
examples/: README.md  config_basic.json  participants_complete.tsv
meg2bids/: __init__.py  meg2bids.py
tests/: test_meg2bids.py
