[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "meg2bids"
version = "1.1.0"
description = "MEG to BIDS converter for Neuromag/Elekta/MEGIN FIF files"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "GPL-3.0"}
authors = [
    {name = "Quentin Vandermiers", email = "quentin.vandermiers@ulb.be"}
]
keywords = ["meg", "bids", "neuroscience", "neuroimaging", "mne", "fif"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mne>=1.0",
    "mne-bids>=0.13",
    "numpy>=1.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=3.0",
    "black>=22.0",
    "flake8>=4.0",
    "pylint>=2.0",
]
docs = [
    "mkdocs>=1.4",
    "mkdocs-material>=9.0",
]

[project.urls]
Homepage = "https://github.com/ln2t/meg2bids"
Documentation = "https://github.com/ln2t/meg2bids/docs"
Repository = "https://github.com/ln2t/meg2bids"
"Bug Reports" = "https://github.com/ln2t/meg2bids/issues"

[project.scripts]
meg2bids = "meg2bids:main"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=meg2bids --cov-report=html --cov-report=term"

[tool.coverage.run]
source = ["meg2bids"]
omit = ["tests/*", "setup.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
